# MicroShader

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  uShader-GUIDE.md
cmake/: version.h.in
docs/: ushaderprofile-schema.md  ushaderprofile.schema.json
fixtures/: algebraic_identities.glsl  already_broken.glsl  block_scope_renaming.glsl  braces.glsl  common_subexpressions.glsl  compound_assign.glsl  constant_folding.glsl  constant_vector_from_folded_values.glsl  constant_vectors.glsl  dead_functions.glsl  dead_locals.glsl  dead_stores.glsl  declaration_heuristic.glsl  declarations.glsl  define_safety.glsl  duplicate_precision.glsl  fractal.glsl  golf_trace.glsl  increment_decrement.glsl  inline_single_call.glsl  macro_only_reference.glsl  numbers_and_ambiguity.glsl  parens.glsl  sample.ushaderprofile  scope_aware_renaming.glsl  struct_safety.glsl  swizzle_after_dot.glsl  ternary_from_if_else.glsl  trailing_void_return.glsl
include/ushader/: golf_core.h
installer/: ushader.iss
rust-core/: Cargo.toml  cbindgen.toml
rust-core/src/: aggressive.rs  budget.rs  callgraph.rs  capi.rs  expr.rs  golfer.rs  inline.rs  lexer.rs  lib.rs  vocab.rs
scripts/: check_contrast.py  generate_app_icon_tiles.py  generate_ui_icons.py
src/: main.cpp  main_win32.cpp
src/platform/: accessibility.cpp  accessibility.h  accessibility_core.cpp  accessibility_core.h  file_dialog.cpp  file_dialog.h  paths.cpp  paths.h  recorder.cpp  recorder.h  screenshot.cpp  screenshot.h  stb_impl.cpp  uia_minimal.h  utf8.cpp  utf8.h
src/render/: default_shader.h  framebuffer.cpp  framebuffer.h  gl_functions.cpp  gl_functions.h  gl_functions_globals.cpp  gl_functions_wgl.cpp  shader_error_state.cpp  shader_error_state.h  shader_runner.cpp  shader_runner.h  texture.cpp  texture.h  wgl_viewport_host.cpp  wgl_viewport_host.h  wgl_viewport_spike_main.cpp
src/report/: report.cpp  report.h  report_encoding.cpp  report_encoding.h
src/ui/: about_panel.cpp  about_panel.h  budget_presets.cpp  budget_presets.h  command_palette.cpp  command_palette.h  diff_view.cpp  diff_view.h  document.cpp  document.h  equivalence_controls.cpp  equivalence_controls.h  exclude_list_import.cpp  exclude_list_import.h  export_wrappers.cpp  export_wrappers.h  fuzzy_match.cpp  fuzzy_match.h  glsl_format.cpp  glsl_format.h  glsl_language.cpp  glsl_language.h  glsl_syntax_colors.cpp  glsl_syntax_colors.h  glsl_token_rules.cpp  glsl_token_rules.h  golf_controls.cpp  golf_controls.h  golf_options_convert.cpp  golf_profile.cpp  golf_profile.h  golf_trace.cpp  golf_trace.h  icons.h  keybindings.cpp  keybindings.h  keybindings_storage.cpp  keybindings_storage.h  layout.cpp  layout.h  (+49 more)
tests/: exclude_list_import_test.cpp  export_wrappers_test.cpp  golf_profile_roundtrip_test.cpp  report_encoding_test.cpp  rust_core_smoke_test.cpp  ushaderprofile_schema_test.cpp  wgl_equivalence_test.cpp  workspace_roundtrip_test.cpp
